# log_test

./: .bash_history  Cargo.toml  Dockerfile
.cargo/: config
src/: main.rs
