[package]
name = "log_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
slog = "2.7.0"
chrono = "0.4.19"
slog-scope = "4.4.0"
slog-term = "2.9.0"
slog-stdlog = "4.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
